# Data-Science

./: README.md  Untitled.ipynb  main.py  pyproject.toml
DeepLearning/Basics/: 01.PyTorch_Basics_Tensors_&_Gradients.ipynb  02.Basics_Pytorch_Model_Building.ipynb  Basics_Pytorch_Model_Building.ipynb  PyTorch_Basics_Tensors_&_Gradients.ipynb
DeepLearning/CNN/: Pytorch_CNN.ipynb
DeepLearning/FrameworkIntro/: Tensorflow_1.ipynb
DeepLearning/NLP/: NLP_in_Tensorflow.ipynb
DeepLearning/NLP/Sentiment Analysis/: Sentiment_Analysis_with_Flair.ipynb
DeepLearning/NLP/Spacy/: Spacy.ipynb  Spacy_3_Masterclass_Tutorial.ipynb
DeepLearning/NLP/Spacy/.ipynb_checkpoints/: Spacy-checkpoint.ipynb  (+1 more)
DeepLearning/NLP/Text Processing/: Sentiment_Analysis_with_Flair.ipynb  Text Processing with NLTK.ipynb
DeepLearning/NLP/Transformers/: NLP_Transformer_Colab_Setup.ipynb  Readme.md
GenAI/: Langchain.ipynb
MachineLearning/Data Analysis/: Pandas Basic Operation 1.ipynb  Pandas.ipynb
MachineLearning/Data Analysis/Read and Write in Pandas/: Read and Write DF.ipynb
MachineLearning/Feature Engineering/: Types of Problem in Feature Engineering .ipynb  Types of Variable.ipynb
MachineLearning/Feature Engineering/Missing Data Imputation/: 1. Complete-Case-Analysis.ipynb  2. Mean Median Imputation .ipynb  3.Aribitary Value Imputation .ipynb
MachineLearning/Feature Selection/: Filter Methods.ipynb
MachineLearning/Gradient Descent/: Gradient Descent.ipynb
MachineLearning/Pipeline/: column_transformers.ipynb  dataset.csv
Pyspark/: HelloSpark.py  README.md
(+2 files in other folders)
